<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"

        app:showAsAction="ifRoom"

        android:orderInCategory="100"


        />

    <item

        android:id="@+id/feedbacks"
        android:title="@string/feedbacks"


        app:showAsAction="ifRoom"

        android:orderInCategory="200"

        />
    <!--<item-->

    <!--android:id="@+id/dev_profile"-->
    <!--android:title="@string/dev_profile"-->


    <!--app:showAsAction="ifRoom"-->

    <!--android:orderInCategory="300"-->

    <!--/>-->
    <item

        android:id="@+id/rate_us"
        android:title="@string/rate_us"


        app:showAsAction="ifRoom"

        android:orderInCategory="300"

        />
</menu>