<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamroschool.activitypages.FeeRecord">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <TableRow

        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:dividerPadding="3dp"

        >

        <TextView
            android:id="@+id/tab_class"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/present_class"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tab_particulars"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/particulars"
            android:textColor="#fff" />
        />

        <TextView
            android:id="@+id/tab_amount"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="#fff" />
        />

        <TextView
            android:id="@+id/tab_date"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/month"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="#fff" />


    </TableRow>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/info_bar"
        android:layout_height="489dp"
        android:id="@+id/scroll_view">
    <TableLayout
        android:id="@+id/main_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp">

    </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_below="@+id/scroll_view"
        android:layout_height="45dp"  android:layout_alignParentBottom="true"
      />

</RelativeLayout>
