<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamroschool.activitypages.ComposeMessage">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="106dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="83dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="103dp"
        android:layout_height="61dp"
        android:layout_alignEnd="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="11dp"
        android:gravity="center"
        android:text="@string/c_message"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="128dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="23dp"
        android:layout_marginTop="140dp"
        android:layout_toEndOf="@+id/textView4"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="275dp"
        android:layout_height="200dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:gravity="center|top"

        android:hint="@string/hint"
        android:inputType="textMultiLine" />


</RelativeLayout>
