<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.hamroschool.activitypages.Exams">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <TableRow

        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:dividerPadding="3dp"


        >

        <TextView
            android:id="@+id/Class"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Class"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tab_exam_type"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/exam_type"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tab_date_of_exam"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_of_exam"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/controls"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/controls"
            android:textColor="#fff" />


    </TableRow>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:layout_below="@+id/info_bar">

        <TableLayout
            android:id="@+id/main_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp">

        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/scroll_view" />

</RelativeLayout>
