<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamroschool.activitypages.TeacherAttendence">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />


    <TableRow

        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:dividerPadding="3dp"


        >

        <TextView
            android:id="@+id/Class"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Student_Name"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tab_exam_type"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/roll"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tab_date_of_exam"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/present"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/controls"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/abscent"
            android:textColor="#fff" />


    </TableRow>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/info_bar"
        android:layout_height="489dp"
        android:id="@+id/scroll_view">
        <TableLayout
            android:id="@+id/attendance_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="6dp"
            android:layout_marginStart="6dp">

        </TableLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
