<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamroschool.activitypages.ConnectToTeachers">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <TableRow

        android:id="@+id/info_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"

        android:background="@color/colorPrimary"
        android:dividerPadding="2dp">

        <TextView
            android:id="@+id/subject"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subject"
            android:textColor="#fff"
            android:textSize="@dimen/textsize" />

        <TextView
            android:id="@+id/teacher"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:text="@string/teacher"
            android:textColor="#fff"
            android:textSize="@dimen/textsize" />
        />

        <TextView
            android:id="@+id/email_string"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email_string"
            android:textColor="#fff"
            android:textSize="@dimen/textsize" />
        />

        <TextView
            android:id="@+id/contact_no"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/contact_no"
            android:textColor="#fff"
            android:textSize="@dimen/textsize" />


    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:id="@+id/scroll_view"
        android:layout_below="@+id/info_bar">

        <TableLayout
            android:id="@+id/main_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="2dp"
            android:layout_marginStart="0dp">

        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_below="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
