<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamroschool.activitypages.Fragments.StudentInfoFragment">


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp">

        <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#dddddd"
            android:scaleType="fitXY"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/ButtonProfile"
            android:layout_width="match_parent"
            android:layout_height="70dp"


            android:background="#dddddd"
            android:gravity="center"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/imageButtonFee"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#dddddd"
            android:scaleType="fitXY"
            android:src="@drawable/feerecord" />

        <TextView
            android:id="@+id/ButtonFeeRecord"
            android:layout_width="match_parent"
            android:layout_height="70dp"


            android:background="#dddddd"
            android:gravity="center"
            android:text="@string/fee_record"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/imageButtonAttendance"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="#dddddd"
            android:scaleType="fitXY"
            android:src="@drawable/attendance" />

        <TextView
            android:id="@+id/ButtonAttendance"
            android:layout_width="match_parent"
            android:layout_height="70dp"


            android:background="#dddddd"
            android:gravity="center"
            android:text="@string/attendence_record"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="13sp" />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="49dp" android:layout_alignParentBottom="true"
        />

</RelativeLayout>
